# DiCoW_Streaming

./: .gitignore  DiCoW_Whisper_Streaming.py  README.md  Streaming_Sortformer_DiCoW_Whisper_Streaming.py  config.yaml  dicow_inference.py  dicow_pipeline.py  evaluate_streaming_wer.py  job.psb  requirements.txt  run_streaming.py
ami/: streaming_1.0s.txt
model/DiCoW/: FDDT.py  SCBs.py  coattention.py  config.json  config.py  decoding.py  encoder.py  generation.py  generation_config.json  layers.py  modeling_dicow.py  utils.py
model/Streaming_Sortformer/: Streaming_Sortformer.py  postprocess.yaml
scoring_dicow/: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
scoring_dicow/src/scoring_dicow/: cli.py  config.py  io.py  mappings.py  metrics.py  reference.py
scoring_dicow/src/scoring_dicow/text_norm/: __init__.py  basic.py  english.py
scoring_dicow/tests/: test_scoring.py
scoring_dicow/tests/fixtures/: sample.TextGrid
whisper_streaming/: whisper_online.py
